--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,12 +26,27 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - # https://github.com/marketplace/actions/build-and-push-docker-images
-        name: Build and Push
+      # https://github.com/marketplace/actions/build-and-push-docker-images
+      - # Image for Latest and openjdk11.
+        name: Build and Push Java 11
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: aceheliflyer/waterfall:latest
+          tags: |
+            aceheliflyer/waterfall:latest
+            aceheliflyer/waterfall:openjdk11
           platforms: linux/amd64,linux/arm64
-          cache-from: type=registry,ref=aceheliflyer/waterfall:latest
+          build-args: JAVA_VERSION=openjdk11-jre-headless
+          cache-from: type=registry,ref=aceheliflyer/waterfall:openjdk11
+          cache-to: type=inline
+
+      - # Image for openjdk8.
+        name: Build and Push Java 8
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: aceheliflyer/waterfall:openjdk8
+          platforms: linux/amd64,linux/arm64
+          build-args: JAVA_VERSION=openjdk8-jre-base
+          cache-from: type=registry,ref=aceheliflyer/waterfall:openjdk8
           cache-to: type=inline
